--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-<form action="/api/v1/sessions" method="POST">
+<form action="/auth" method="POST">
     Login: <input type="text" name="login"/>
-    Password: <input type="password" name="pass"/>
+    Password: <input type="password" name="password"/>
     <input type="submit" value="Sign in">
 </form>
 </body>
